Adding postgre sql configuration

--- a/AuthServer/appsettings.json
+++ b/AuthServer/appsettings.json
@@ -7,6 +7,10 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=PAP-IN-ENGG-132\\SQLEXPRESS;Database=AuthServer2;User ID=sa;Password=12345;Trust Server Certificate=True;"
+    // For ms sql
+    //"DefaultConnection": "Server=(localhost);Database=AuthServer2;User ID=sa;Password=12345;Trust Server Certificate=True;"
+
+    // For postgresql
+    "DefaultConnection": "Host=localhost;Port=5432;Database=AuthServer;Username=postgres;Password=12345;Trust Server Certificate=true;"
   }
 }
