--- a/AuthServer/AuthServer.csproj
+++ b/AuthServer/AuthServer.csproj
@@ -8,6 +8,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.3" />
+		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
 		<PackageReference Include="OpenIddict.AspNetCore" Version="6.1.1" />
 		<PackageReference Include="OpenIddict.EntityFrameworkCore" Version="6.1.1" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.3" />
