--- a/Services/Identity/appsettings.json
+++ b/Services/Identity/appsettings.json
@@ -6,11 +6,12 @@
     }
   },
   "AllowedHosts": "*",
-  //"Twilio": {
-  //  "AccountSid": "",
-  //  "AuthToken": "",
-  //  "PhoneNumber": ""
-  //},
+  "Twilio": {
+    "AccountSid": "",
+    "AuthToken": "",
+    "PhoneNumber": ""
+
+  },
   "ConnectionStrings": {
     // For ms sql
     //"DefaultConnection": "Server=(localhost);Database=AuthServer2;User ID=sa;Password=12345;Trust Server Certificate=True;"
