--- a/Services/Identity/Identity.csproj
+++ b/Services/Identity/Identity.csproj
@@ -18,4 +18,8 @@
 	  <PackageReference Include="Twilio" Version="7.9.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Shared\Common\Common.csproj" />
+  </ItemGroup>
+
 </Project>
