--- a/Services/Service1/Service1.csproj
+++ b/Services/Service1/Service1.csproj
@@ -14,4 +14,8 @@
 
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Shared\Common\Common.csproj" />
+  </ItemGroup>
+
 </Project>
